--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -37,4 +37,4 @@ jobs:
         commit_user_name: github-actions[bot]
         commit_user_email: github-actions[bot]@users.noreply.github.com
         repository: ${{ github.repository }}
-        token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.SECRET }}
