--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
       - develop
+      
+  pull_request_target:
+    branches:
+      - main
+      - develop
 
 jobs:
   minify-js:
